--- a/client/src/pages/SignUp.css
+++ b/client/src/pages/SignUp.css
@@ -1,27 +1,28 @@
 .signup-form-parent {
-    width: 100vw;
     height: 100vh;
     justify-content: center;
+    display: flex;
 }
 
 .signup-form-container {
-    margin-left: 400px;
-    background-color: #e5d7bc;
+    /* background-color: #e5d7bc; */
     width: 400px;
     display: flex;
     flex-direction: column;
-    align-items: center;
     justify-content: center;
     padding-bottom: 20px;
     border-radius: 10px;
-    box-shadow: 0px 4px 13px rgba(0, 0, 0, 0.15);
+    margin-top: -100px;
+    /* box-shadow: 0px 4px 13px rgba(0, 0, 0, 0.15); */
 }
 
 .signup-field > input {
-    width: 300px;
-    height: 30px;
-    border-style: none;
+    width: 400px;
+    height: 40px;
     border-radius: 10px;
+    margin-bottom: 0px;
+    border-style: none;
+    border: 1.2px solid black;
 }
 
 .signup-field {
@@ -32,11 +33,10 @@
 
 .signup-label {
     display: flex;
-    justify-content: flex-start;
     margin-top: 5px;
     font-weight: 600;
     letter-spacing: 0.2px;
-    font-size: 14px;
+    font-size: 16px;
 }
 
 .signup-header {
@@ -62,4 +62,31 @@
     background-color: white;
     font-weight: bold;
     margin-top: 20px;
+    background-color: #e5d7bc;
+}
+
+.signup-img {
+    width: 60vw;
+    object-fit: cover;
+}
+
+.signup-img > img {
+    height: 100vh;
+    width: 60vw;
+    margin-left: 100px;
+}
+
+.signin-btn {
+    color: #e5d7bc;
+}
+
+.signup-footer {
+    display: flex;
+    align-items: center;
+    column-gap: 15px;
+}
+
+.to-login {
+    margin-top: 20px;
+    font-weight: 600;
 }
