--- a/client/src/pages/Profile.css
+++ b/client/src/pages/Profile.css
@@ -18,3 +18,10 @@
     margin-top: 50px;
     margin-left: 20px;
 }
+
+.plain__btn{
+    margin-bottom: 20px;
+    width: 20%;
+    height: 50px;
+
+}
