--- a/client/src/pages/SignUp.css
+++ b/client/src/pages/SignUp.css
@@ -1,3 +1,4 @@
+
 .signup-form-parent {
     height: 100vh;
     justify-content: center;
@@ -6,18 +7,19 @@
 
 .signup-form-container {
     /* background-color: #e5d7bc; */
-    width: 400px;
+    width: 25vw;
     display: flex;
     flex-direction: column;
     justify-content: center;
     padding-bottom: 20px;
     border-radius: 10px;
-    margin-top: -100px;
+    margin-top: -75px;
     /* box-shadow: 0px 4px 13px rgba(0, 0, 0, 0.15); */
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .signup-field > input {
-    width: 400px;
+    width: 100%;
     height: 40px;
     border-radius: 10px;
     margin-bottom: 0px;
