--- a/client/src/pages/Alumni.css
+++ b/client/src/pages/Alumni.css
@@ -3,13 +3,13 @@
     font-size: 'system-ui' !important;
 }
 
-.ant-input-affix-wrapper{
+span.ant-input-affix-wrapper{
     border: 0.5px solid #000000 !important;
     border-radius: 10px !important;
     width: 75% !important;
 }
 
-.ant-input-affix-wrapper > span{
+span.ant-input-affix-wrapper > span{
     text-align: right;
     padding-right: -25px !important;
 }
