--- a/client/src/pages/SignUp.css
+++ b/client/src/pages/SignUp.css
@@ -25,6 +25,7 @@
     margin-bottom: 0px;
     border-style: none;
     border: 1.2px solid black;
+    margin-top: -15px;
 }
 
 .signup-field {
@@ -35,21 +36,23 @@
 
 .signup-label {
     display: flex;
+    align-items: flex-end;
     margin-top: 5px;
-    font-weight: 600;
+    font-weight: 700;
     letter-spacing: 0.2px;
-    font-size: 16px;
+    font-size: 12px;
+    margin-left: 3px;
 }
 
 .signup-header {
-    font-size: 24px;
+    font-size: 32px;
     font-weight: bold;
 }
 
 .signup-header-container {
+    margin-top: 30px;
     display: flex;
     width: 100%;
-    margin-left: 100px;
 }
 
 .signup-submit {
@@ -60,10 +63,9 @@
     align-items: center;
     border-radius: 28px;
     border-style: none;
-    font-size: 14px;
+    font-size: 12px;
     background-color: white;
-    font-weight: bold;
-    margin-top: 20px;
+    font-weight: 600;
     background-color: #e5d7bc;
 }
 
@@ -89,10 +91,23 @@
 }
 
 .to-login {
-    margin-top: 20px;
-    font-weight: 600;
+    display: flex;
+    column-gap: 5px;
+    margin-top: 10px;
+    font-weight: 500;
+    font-size: 16px;
+    background-color: white;
+    border-style: none;
 }
 
-.login__input{
-    
+.signin-btn {
+    color: #b99d79;
+}
+
+.signin-btn:hover {
+    cursor: pointer;
+}
+
+.login__form {
+    margin-top: -20px;
 }
