--- a/client/src/pages/EventItem.css
+++ b/client/src/pages/EventItem.css
@@ -3,7 +3,9 @@
     width: 35vw;
     height: 180px;
     box-shadow: 0px 4px 13px rgba(0, 0, 0, 0.15);
+    border: 1px solid lightgray;
     padding: 10px;
+    margin-top: 10px;
 }
 
 .event-header {
